--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -264,13 +264,13 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="jTextFieldFileOnServer" min="-2" pref="232" max="-2" attributes="0"/>
+                                      <Component id="jTextFieldInfileOnServer" min="-2" pref="232" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                                      <Component id="jTextFieldFileOnLocalhost2" min="-2" pref="232" max="-2" attributes="0"/>
+                                      <Component id="jTextFieldOutfileOnServer" min="-2" pref="232" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
@@ -278,9 +278,9 @@
                                           <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jTextFieldFileOnLocalhost1" min="-2" pref="232" max="-2" attributes="0"/>
-                                          <Component id="jTextFieldFileOnLocalhost" alignment="0" min="-2" pref="232" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                          <Component id="jTextFieldOutfileOnLocalhost" max="32767" attributes="1"/>
+                                          <Component id="jTextFieldInfileOnLocalhost" alignment="1" pref="235" max="32767" attributes="1"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -301,7 +301,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="249" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="187" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -358,27 +358,30 @@
                       <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextFieldFileOnServer" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jTextFieldInfileOnServer" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="3" pref="3" max="3" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jTextFieldFileOnLocalhost" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                              <Component id="jTextFieldInfileOnLocalhost" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextFieldFileOnLocalhost1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jTextFieldOutfileOnLocalhost" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jTextFieldFileOnLocalhost2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jTextFieldOutfileOnServer" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="12" max="32767" attributes="0"/>
+                      <EmptySpace pref="8" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jButtonApply" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jButtonCancel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -476,9 +479,9 @@
                 <Property name="text" type="java.lang.String" value="jPasswordField1"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextFieldFileOnServer">
+            <Component class="javax.swing.JTextField" name="jTextFieldInfileOnServer">
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextFieldFileOnLocalhost">
+            <Component class="javax.swing.JTextField" name="jTextFieldInfileOnLocalhost">
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
@@ -495,7 +498,7 @@
                 <Property name="text" type="java.lang.String" value="FTP-&#x43f;&#x430;&#x440;&#x43e;&#x43b;&#x44c;"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextFieldFileOnLocalhost1">
+            <Component class="javax.swing.JTextField" name="jTextFieldOutfileOnLocalhost">
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="MainFrame_jTextFieldFileOnLocalhost1"/>
               </AuxValues>
@@ -505,7 +508,7 @@
                 <Property name="text" type="java.lang.String" value="&#x424;&#x430;&#x439;&#x43b; &#x432;&#x44b;&#x433;&#x440;&#x443;&#x437;&#x43a;&#x438; &#x43b;&#x43e;&#x43a;&#x430;&#x43b;&#x44c;&#x43d;&#x43e;"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextFieldFileOnLocalhost2">
+            <Component class="javax.swing.JTextField" name="jTextFieldOutfileOnServer">
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel5">
               <Properties>
