--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -117,14 +117,17 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButtonRunOutfile" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
-                          <Component id="jButtonRunUpload" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
-                          <Component id="jButtonRunDownload" alignment="1" min="-2" pref="146" max="-2" attributes="1"/>
-                          <Component id="jButtonRunAll" alignment="0" min="-2" pref="146" max="-2" attributes="1"/>
-                          <Component id="jButtonRunInfile" alignment="1" min="-2" pref="146" max="-2" attributes="1"/>
-                          <Component id="jButtonRunSynch" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jButtonRunOutfile" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
+                              <Component id="jButtonRunUpload" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
+                              <Component id="jButtonRunDownload" alignment="1" min="-2" pref="146" max="-2" attributes="1"/>
+                              <Component id="jButtonRunAll" alignment="0" min="-2" pref="146" max="-2" attributes="1"/>
+                              <Component id="jButtonRunInfile" alignment="1" min="-2" pref="146" max="-2" attributes="1"/>
+                              <Component id="jButtonRunSynch" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="jProgressBar1" min="-2" pref="138" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="454" max="-2" attributes="1"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -143,7 +146,9 @@
                       <Component id="jButtonRunUpload" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jButtonRunOutfile" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="137" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+                      <Component id="jProgressBar1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="61" max="32767" attributes="0"/>
                       <Component id="jButtonRunSynch" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                   </Group>
@@ -223,6 +228,8 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="&#x421;&#x438;&#x43d;&#x445;&#x440;&#x43e;&#x43d;&#x438;&#x437;&#x430;&#x446;&#x438;&#x44f;"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JProgressBar" name="jProgressBar1">
             </Component>
           </SubComponents>
         </Container>
