--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -131,7 +131,7 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="454" max="-2" attributes="1"/>
-                      <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -399,6 +399,7 @@
                                   <Component id="jLabelBaseSource" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabelFTPSource" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabelFTPUser" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jCheckBoxMinimiz" alignment="0" min="-2" pref="176" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -452,21 +453,23 @@
                               <Component id="jLabelBaseUserAndPass" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="173" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="180" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
                       <Component id="jButtonApply" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="228" max="32767" attributes="0"/>
                       <Component id="jButtonCancel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="115" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="122" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jCheckBoxMinimiz" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="jLabelPlatformSource" min="-2" max="-2" attributes="0"/>
@@ -659,6 +662,11 @@
             <Component class="javax.swing.JLabel" name="jLabelOutfileOnServer">
               <Properties>
                 <Property name="text" type="java.lang.String" value="&#x424;&#x430;&#x439;&#x43b; &#x432;&#x44b;&#x433;&#x440;&#x443;&#x437;&#x43a;&#x438; &#x43d;&#x430; &#x441;&#x435;&#x440;&#x432;&#x435;&#x440;&#x435;"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JCheckBox" name="jCheckBoxMinimiz">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="&#x417;&#x430;&#x43f;&#x443;&#x441;&#x43a;&#x430;&#x442;&#x44c; &#x43c;&#x438;&#x43d;&#x438;&#x43c;&#x438;&#x437;&#x438;&#x440;&#x43e;&#x432;&#x430;&#x43d;&#x43d;&#x43e;&#x439;"/>
               </Properties>
             </Component>
           </SubComponents>
