--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -573,7 +573,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="jTextFieldFTPSource">
               <Events>
-                <EventHandler event="inputMethodTextChanged" listener="java.awt.event.InputMethodListener" parameters="java.awt.event.InputMethodEvent" handler="jTextFieldFTPSourceInputMethodTextChanged"/>
+                <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextFieldFTPSourceKeyReleased"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabelFTPSource">
